Fixed spacing on modal myself user

--- a/react-app/src/components/ProfilePage/ProfilePage.css
+++ b/react-app/src/components/ProfilePage/ProfilePage.css
@@ -288,6 +288,10 @@
   cursor: pointer;
 }
 
+.myself-header.modal-me {
+  margin-left: 0px;
+}
+
 .hr {
   width: 100%;
 }
